--- a/LevelBuilder/styles.css
+++ b/LevelBuilder/styles.css
@@ -106,6 +106,64 @@ button:hover { background: #0098ff; }
     clip-path: polygon(0% 100%, 25% 0%, 50% 100%, 75% 0%, 100% 100%);
 }
 
+/* Full Spike (F) - Red Block */
+.palette-item[data-type="F"], .cell.type-F { 
+    background-color: #ff3232; 
+    color: white; 
+    border: 2px solid #8b0000;
+}
+
+/* Ceiling Spike (C) - Orange Top Strip */
+.palette-item[data-type="C"] { background-color: #ffa500; color: black; }
+.cell.type-C { 
+    background-color: transparent; 
+    position: relative;
+    color: transparent;
+}
+.cell.type-C::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 30%;
+    background-color: #ffa500;
+}
+
+/* Left Wall Spike (L) - Yellow Left Strip */
+.palette-item[data-type="L"] { background-color: #ffff00; color: black; }
+.cell.type-L { 
+    background-color: transparent; 
+    position: relative;
+    color: transparent;
+}
+.cell.type-L::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 30%;
+    height: 100%;
+    background-color: #ffff00;
+}
+
+/* Right Wall Spike (R) - Purple Right Strip */
+.palette-item[data-type="R"] { background-color: #800080; color: white; }
+.cell.type-R { 
+    background-color: transparent; 
+    position: relative;
+    color: transparent;
+}
+.cell.type-R::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 30%;
+    height: 100%;
+    background-color: #800080;
+}
+
 .palette-item[data-type="N"], .cell.type-N { background-color: #00ffff; color: black; } /* Cyan */
 .palette-item[data-type="D"], .cell.type-D { background-color: #b22222; color: white; } /* Firebrick */
 .palette-item[data-type="P"], .cell.type-P { background-color: #1e90ff; color: white; } /* Dodger Blue */
