--- a/LevelBuilder/styles.css
+++ b/LevelBuilder/styles.css
@@ -184,6 +184,8 @@ button:hover { background: #0098ff; }
 .palette-item[data-type="D"], .cell.type-D { background-color: #b22222; color: white; } /* Firebrick */
 .palette-item[data-type="P"], .cell.type-P { background-color: #1e90ff; color: white; } /* Dodger Blue */
 .palette-item[data-type="E"], .cell.type-E { background-color: #ff00ff; color: white; } /* Magenta */
+.palette-item[data-type="T"], .cell.type-T { background-color: #00ced1; color: white; border: 2px solid #fff; } /* Dark Turquoise */
+.palette-item[data-type="t"], .cell.type-t { background-color: #afeeee; color: black; border: 2px dashed #00ced1; } /* Pale Turquoise */
 .palette-item[data-type=" "], .cell.type-space { background-color: #444; color: #888; } /* Empty */
 .cell.keyboard-selected {
     box-shadow: inset 0 0 0 2px #fff, 0 0 10px #fff;
